tests/fail/duplicate_arguments_section.stderr
error: Duplicate attribute not allowed.
 --> tests/fail/duplicate_arguments_section.rs:9:1
  |
9 | #[arguments_section]
  | ^^^^^^^^^^^^^^^^^^^^
